--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,6 +1,6 @@
 ---
-title: 'Blog Post number 1'
-date: 2012-08-14
+title: 'My Journey in AI'
+date: 2023-10-23
 permalink: /posts/2012/08/blog-post-1/
 tags:
   - cool posts
@@ -8,13 +8,7 @@ tags:
   - category2
 ---
 
-This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
-
-Headings are cool
+It all started here
 ======
+My Journey to Deep Learning and applications started with Control systems. My interest on automating things via control systems has drawn me close to working on different projects as a part of the robotics club at IITH. Eventually, my interest in automation drawn me towards AI since the end of my sophomore year. By then, I became the head of robotics club and focused on an intersection of both these fields. From my Junior year, I used to work with Dr. Srijith P.K and Dr. Shantanu Desai on Bayesian Optimization and with Dr. Sumohana Chennappaya on generative approaches on images and videos. These interests evolved and led me to be interested in working on applications of vision and Deep Learning in different fields. I have various other interests in an intersection of Reinforcement Learning and Videos, Bayesian Modelling, and NLP. I would like to pursue work in any of these areas as a next step of my career in my Ph.D.
 
-You can have many headings
-======
-
-Aren't headings cool?
-------
