--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -6,7 +6,10 @@ tags:
   - Control Systems
   - Robotics
   - Deep Learning
+  - Life
 ---
+
+I am starting to blog my experiences in life and academia. These blogs are neither perfect nor complete. But please do read them if you are interested, and hope it connects with you in some mythical sense. 
 
 It all started here
 ======
