--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -9,15 +9,16 @@ tags:
   - Life
 ---
 
+Hello there! 
+======
 I am starting to blog my experiences in life and academia. These blogs are neither perfect nor complete. But please do read them if you are interested, and hope it connects with you in some mythical sense. 
 
 It all started here
-======
+------
 My Journey to Deep Learning and applications started with Control systems. My interest on automating things via control systems has drawn me close to working on different projects as a part of the robotics club at IITH. Eventually, my interest in automation drawn me towards AI since the end of my sophomore year. By then, I became the head of robotics club and focused on an intersection of both these fields. From my Junior year, I used to work with Dr. Srijith P.K and Dr. Shantanu Desai on Bayesian Optimization and with Dr. Sumohana Chennappaya on generative approaches on images and videos. These interests evolved and led me to be interested in working on applications of vision and Deep Learning in different fields.
 
+------
 I later went on working with Dr. K Sri Rama Murthy on applications of deep learning in acoustics, and we published our work in the Journal of Acoustic Society of America. I have various other interests in an intersection of Reinforcement Learning and Videos, Bayesian Modelling, and NLP. I would like to pursue work in any of these areas as a next step of my career in my Ph.D.
-
-
 
 Through my journey in life, my interests evolved outside of STEM, and I now really appreciate arts and music. I enjoy listening to old indian musical classics from the 80s and 90s, and through different professors I was introduced to some of the masterpieces of Chopin and Rachmaninoff. 
 I do enjoy going to live theatre and orchestra. 
