--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -11,7 +11,7 @@ tags:
 
 Hello there! 
 ======
-I am starting to blog my experiences in life and academia. These blogs are neither perfect nor complete. But please do read them if you are interested, and hope it connects with you in some mythical sense. 
+I am starting to blog my experiences in life and academia. These blogs are neither perfect nor complete. But please do read them if you are interested, and hope it connects with you in some meaningful sense. 
 
 It all started here
 ------
